--- a/kaboom/kaboom.html
+++ b/kaboom/kaboom.html
@@ -20,121 +20,10 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
+        <script src="kaboom.js"></script>
+        
         <!-- <script src="script.js"></script> -->
         <script>
-            // JS
-
-            // initialize kaboom context
-            kaboom();
-
-            // load a sprite "bean" from an image
-            loadSprite("amongUs", "sprites/amongUsRed.jpg")
-
-            const amongUsRed = add([
-                sprite("amongUs"),
-                pos(100, 400),
-                area(),
-                scale(0.01),
-                body(),
-                z(2),
-                offscreen({pause:false}),
-                "cat"
-            ]);
-
-            const amongUsOrange = add([
-                sprite("amongUs"),
-                pos(490, 300),
-                scale(0.2),
-                area({ scale: 1}),
-                z(1),
-                anchor("center"),
-                // body(),
-                color(220, 75, 25),
-                // "amongUs"
-                "water"
-            ]);
-
-            const amongUsGreen = add([
-                sprite("amongUs"),
-                pos(650, 400),
-                anchor("center"),
-                scale(0.1),
-                area(),
-                body(),
-                color(120, 175, 25),
-                z(2),
-                "amongUs"
-            ]);
-
-            // move in normal speed
-
-            onKeyDown("left", () => {
-                 amongUsRed.move(-500, 0)
-            })
-            onKeyDown("a", () => {
-                amongUsRed.move(-500, 0)
-            })
-            onKeyDown("right", () => {
-                 amongUsRed.move(500, 0)
-            })
-            onKeyDown("d", () => {
-                 amongUsRed.move(500, 0)
-            })
-            onKeyDown("up",() => {
-                 amongUsRed.move(0, -500)
-            })
-            onKeyDown("w",() => {
-                 amongUsRed.move(0, -500)
-            })
-            onKeyDown("down",() => {
-                 amongUsRed.move(0, 500)
-            })
-            onKeyDown("s",() => {
-                amongUsRed.move(0, 500)
-            })
-
-            // move on water
-
-            // amongUsRed.onCollide("water", () => {
-            //     onKeyDown("w",() => {
-            //         amongUsRed.move(0, -10)
-            //     }),
-            //     onKeyDown("s",() => {
-            //         amongUsRed.move(0, 10)
-            //     }),
-            //     onKeyDown("d", () => {
-            //         amongUsRed.move(10, 0)
-            //     }),
-            //     onKeyDown("a", () => {
-            //         amongUsRed.move(-10, 0)
-            //     })
-            // })
-
-            // make a score
-            const catFood = add([
-                text("Cat food: 0"),
-                pos(24, 24),
-                { value: 0 },
-            ])
-
-            amongUsRed.onCollide("amongUs",() => {
-                destroyAll("amongUs");
-                catFood.value += 1;
-                catFood.text = "Cat food:" + catFood.value;
-                var x = rand(width());
-                var y = rand(height())
-                add([
-                    sprite("amongUs"),
-                    pos(x, y),
-                    scale(0.1),
-                    area(),
-                    body(),
-                    color(120, 175, 25),
-                    anchor("center"),
-                    z(2),
-                    "amongUs"
-                ]);
-            })
 
         </script>
     </body>
